# labs_OS

./: .gitignore
lab1/: lab1  update.bat
lab2/: CMakeLists.txt  update.bat  update.sh
lab4/: CMakeLists.txt  generator.py  temp_parser.cpp
lab5/: CMakeLists.txt  client.cpp  database.h  ui.html
lab5/sever/: server.py
